# inz-backend

./: .env  .gitignore  Cargo.toml  docker-compose.yaml  endpoint.md
certs/: cert.pem  key.pem
migrations/: 20220814204656_start.sql  20220815093424_lobby.sql  20221009143346_game.sql  20221011200400_template.sql  20221107000117_constraints.sql
src/: auth.rs  common_tests.rs  entities.rs  error.rs  lobby.rs  main.rs  template.rs  user.rs  websocets.rs  websockets.rs
src/lobby/: game.rs  lobby.rs  lobby_endpoints.rs  mod.rs  stats.rs  tests.rs
src/template/: mod.rs  template.rs  tests.rs
src/template/fixtures/: users.sql
src/user/: mod.rs  tests.rs  user.rs  user_endpoints.rs
src/user/fixtures/: users.sql
