[package]
name = "inzbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
axum = { version = "0.5.15", features = ["headers", "ws"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.36"
tower = { version = "0.4", features = ["full"] }
axum-macros = "0.2.3"
sqlx = { version = "0.6.2", features = [ "macros", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
argon2 = "0.4.1"
dotenv = "0.15.0"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
axum-typed-websockets = "0.4.0"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
